@@ -15,7 +15,6 @@ import static com.linkedin.metadata.Constants.ML_MODEL_ENTITY_NAME;
 import static com.linkedin.metadata.Constants.ML_MODEL_GROUP_ENTITY_NAME;
 import static com.linkedin.metadata.Constants.ML_PRIMARY_KEY_ENTITY_NAME;
 import static com.linkedin.metadata.Constants.NOTEBOOK_ENTITY_NAME;
-import static com.linkedin.metadata.Constants.REST_API_AUTHORIZATION_ENABLED_ENV;
 import static com.linkedin.metadata.authorization.ApiGroup.ENTITY;
 import static com.linkedin.metadata.authorization.ApiOperation.CREATE;
 import static com.linkedin.metadata.authorization.ApiOperation.DELETE;
@@ -24,9 +23,8 @@ import static com.linkedin.metadata.authorization.ApiOperation.UPDATE;
 import static com.linkedin.metadata.authorization.Disjunctive.DENY_ACCESS;
 import static com.linkedin.metadata.authorization.PoliciesConfig.API_ENTITY_PRIVILEGE_MAP;
 import static com.linkedin.metadata.authorization.PoliciesConfig.API_PRIVILEGE_MAP;
+import static com.linkedin.metadata.authorization.PoliciesConfig.MANAGE_SYSTEM_OPERATIONS_PRIVILEGE;
 
-import com.datahub.authentication.Authentication;
-import com.datahub.plugins.auth.authorization.Authorizer;
 import com.google.common.annotations.VisibleForTesting;
 import com.google.common.collect.ImmutableSet;
 import com.linkedin.common.urn.Urn;
@@ -48,14 +46,17 @@ import com.linkedin.metadata.utils.EntityKeyUtils;
 import com.linkedin.mxe.MetadataChangeProposal;
 import com.linkedin.util.Pair;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
+import javax.annotation.PostConstruct;
 import org.apache.http.HttpStatus;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.stereotype.Component;
 
 /**
  * Notes: This class is an attempt to unify privilege checks across APIs.
@@ -69,7 +70,27 @@ import org.apache.http.HttpStatus;
  * <p>isAPI...() functions are intended for OpenAPI and Rest.li since they are governed by an enable
  * flag. GraphQL is always enabled and should use is...() functions.
  */
+@Component
+// TODO: Condense abstractions here, should ideally be on public entrypoint here with an Auth
+// Request Wrapper to reduce
+//       complexity of tracking flows
 public class AuthUtil {
+
+  // Since all methods of this class are static, need to postConstruct to initialize the static var
+  // from the instance var that spring can initialize
+  // TODO: Some unit tests seem to rely on this being false, so setting the default to false.
+  // When running as the spring boot application, the default property value is true.
+  private static boolean isRestApiAuthorizationEnabled = false;
+
+  // Eliminating the dependency on the env var REST_API_AUTHORIZATION_ENABLED and instead using the
+  // application property to keep it consistent with all other usage of that property.
+  @Value("${authorization.restApiAuthorization:true}")
+  protected Boolean restApiAuthorizationEnabled;
+
+  @PostConstruct
+  protected void init() {
+    AuthUtil.isRestApiAuthorizationEnabled = this.restApiAuthorizationEnabled;
+  }
 
   /**
    * This should generally follow the policy creation UI with a few exceptions for users, groups,
@@ -95,8 +116,7 @@ public class AuthUtil {
 
   /** OpenAPI/Rest.li Methods */
   public static List<Pair<MetadataChangeProposal, Integer>> isAPIAuthorized(
-      @Nonnull final Authentication authentication,
-      @Nonnull final Authorizer authorizer,
+      @Nonnull final AuthorizationSession session,
       @Nonnull final ApiGroup apiGroup,
       @Nonnull final EntityRegistry entityRegistry,
       @Nonnull final Collection<MetadataChangeProposal> mcps) {
@@ -117,8 +137,7 @@ public class AuthUtil {
 
     Map<Pair<ChangeType, Urn>, Integer> authorizationResult =
         isAPIAuthorizedUrns(
-            authentication,
-            authorizer,
+            session,
             apiGroup,
             changeUrnMCPs.stream().map(Pair::getFirst).collect(Collectors.toSet()));
 
@@ -133,8 +152,7 @@ public class AuthUtil {
   }
 
   public static Map<Pair<ChangeType, Urn>, Integer> isAPIAuthorizedUrns(
-      @Nonnull final Authentication authentication,
-      @Nonnull final Authorizer authorizer,
+      @Nonnull final AuthorizationSession session,
       @Nonnull final ApiGroup apiGroup,
       @Nonnull final Collection<Pair<ChangeType, Urn>> changeTypeUrns) {
 
@@ -150,28 +168,28 @@ public class AuthUtil {
                 case RESTATE:
                 case PATCH:
                   if (!isAPIAuthorized(
-                      authentication,
-                      authorizer,
+                      session,
                       lookupAPIPrivilege(apiGroup, UPDATE, urn.getEntityType()),
-                      new EntitySpec(urn.getEntityType(), urn.toString()))) {
+                      new EntitySpec(urn.getEntityType(), urn.toString()),
+                      Collections.emptyList())) {
                     return Pair.of(changeTypePair, HttpStatus.SC_FORBIDDEN);
                   }
                   break;
                 case CREATE_ENTITY:
                   if (!isAPIAuthorized(
-                      authentication,
-                      authorizer,
+                      session,
                       lookupAPIPrivilege(apiGroup, CREATE, urn.getEntityType()),
-                      new EntitySpec(urn.getEntityType(), urn.toString()))) {
+                      new EntitySpec(urn.getEntityType(), urn.toString()),
+                      Collections.emptyList())) {
                     return Pair.of(changeTypePair, HttpStatus.SC_FORBIDDEN);
                   }
                   break;
                 case DELETE:
                   if (!isAPIAuthorized(
-                      authentication,
-                      authorizer,
+                      session,
                       lookupAPIPrivilege(apiGroup, DELETE, urn.getEntityType()),
-                      new EntitySpec(urn.getEntityType(), urn.toString()))) {
+                      new EntitySpec(urn.getEntityType(), urn.toString()),
+                      Collections.emptyList())) {
                     return Pair.of(changeTypePair, HttpStatus.SC_FORBIDDEN);
                   }
                   break;
@@ -184,58 +202,45 @@ public class AuthUtil {
   }
 
   public static boolean isAPIAuthorizedResult(
-      @Nonnull final Authentication authentication,
-      @Nonnull final Authorizer authorizer,
-      @Nonnull final SearchResult result) {
+      @Nonnull final AuthorizationSession session, @Nonnull final SearchResult result) {
     return isAPIAuthorizedEntityUrns(
-        authentication,
-        authorizer,
+        session,
         READ,
         result.getEntities().stream().map(SearchEntity::getEntity).collect(Collectors.toList()));
   }
 
   public static boolean isAPIAuthorizedResult(
-      @Nonnull final Authentication authentication,
-      @Nonnull final Authorizer authorizer,
-      @Nonnull final ScrollResult result) {
+      @Nonnull final AuthorizationSession session, @Nonnull final ScrollResult result) {
     return isAPIAuthorizedEntityUrns(
-        authentication,
-        authorizer,
+        session,
         READ,
         result.getEntities().stream().map(SearchEntity::getEntity).collect(Collectors.toList()));
   }
 
   public static boolean isAPIAuthorizedResult(
-      @Nonnull final Authentication authentication,
-      @Nonnull final Authorizer authorizer,
-      @Nonnull final AutoCompleteResult result) {
+      @Nonnull final AuthorizationSession session, @Nonnull final AutoCompleteResult result) {
     return isAPIAuthorizedEntityUrns(
-        authentication,
-        authorizer,
+        session,
         READ,
         result.getEntities().stream().map(AutoCompleteEntity::getUrn).collect(Collectors.toList()));
   }
 
   public static boolean isAPIAuthorizedResult(
-      @Nonnull final Authentication authentication,
-      @Nonnull final Authorizer authorizer,
-      @Nonnull final BrowseResult result) {
+      @Nonnull final AuthorizationSession session, @Nonnull final BrowseResult result) {
     return isAPIAuthorizedEntityUrns(
-        authentication,
-        authorizer,
+        session,
         READ,
         result.getEntities().stream().map(BrowseResultEntity::getUrn).collect(Collectors.toList()));
   }
 
   public static boolean isAPIAuthorizedUrns(
-      @Nonnull final Authentication authentication,
-      @Nonnull final Authorizer authorizer,
+      @Nonnull final AuthorizationSession session,
       @Nonnull final ApiGroup apiGroup,
       @Nonnull final ApiOperation apiOperation,
       @Nonnull final Collection<Urn> urns) {
 
     if (ApiGroup.ENTITY.equals(apiGroup)) {
-      return isAPIAuthorizedEntityUrns(authentication, authorizer, apiOperation, urns);
+      return isAPIAuthorizedEntityUrns(session, apiOperation, urns);
     }
 
     List<EntitySpec> resourceSpecs =
@@ -244,15 +249,14 @@ public class AuthUtil {
             .collect(Collectors.toList());
 
     return isAPIAuthorized(
-        authentication,
-        authorizer,
+        session,
         lookupAPIPrivilege(apiGroup, apiOperation, null),
-        resourceSpecs);
+        resourceSpecs,
+        Collections.emptyList());
   }
 
   public static boolean isAPIAuthorizedEntityUrns(
-      @Nonnull final Authentication authentication,
-      @Nonnull final Authorizer authorizer,
+      @Nonnull final AuthorizationSession session,
       @Nonnull final ApiOperation apiOperation,
       @Nonnull final Collection<Urn> urns) {
 
@@ -265,43 +269,63 @@ public class AuthUtil {
         .allMatch(
             entry ->
                 isAPIAuthorized(
-                    authentication,
-                    authorizer,
+                    session,
                     lookupAPIPrivilege(ENTITY, apiOperation, entry.getKey()),
-                    entry.getValue()));
+                    entry.getValue(),
+                    Collections.emptyList()));
+  }
+
+  public static boolean isAPIAuthorizedEntityUrnsWithSubResources(
+      @Nonnull final AuthorizationSession session,
+      @Nonnull final ApiOperation apiOperation,
+      @Nonnull final Collection<Urn> urns,
+      @Nonnull final Collection<Urn> subResources) {
+
+    Map<String, List<EntitySpec>> resourceSpecs =
+        urns.stream()
+            .map(urn -> new EntitySpec(urn.getEntityType(), urn.toString()))
+            .collect(Collectors.groupingBy(EntitySpec::getType));
+
+    Set<EntitySpec> subResourceSpecs =
+        subResources.stream()
+            .map(urn -> new EntitySpec(urn.getEntityType(), urn.toString()))
+            .collect(Collectors.toSet());
+
+    return resourceSpecs.entrySet().stream()
+        .allMatch(
+            entry ->
+                isAPIAuthorized(
+                    session,
+                    lookupAPIPrivilege(ENTITY, apiOperation, entry.getKey()),
+                    entry.getValue(),
+                    subResourceSpecs));
   }
 
   public static boolean isAPIAuthorizedEntityType(
-      @Nonnull final Authentication authentication,
-      @Nonnull final Authorizer authorizer,
+      @Nonnull final AuthorizationSession session,
       @Nonnull final ApiOperation apiOperation,
       @Nonnull final String entityType) {
-    return isAPIAuthorizedEntityType(
-        authentication, authorizer, ENTITY, apiOperation, List.of(entityType));
+    return isAPIAuthorizedEntityType(session, ENTITY, apiOperation, List.of(entityType));
   }
 
   public static boolean isAPIAuthorizedEntityType(
-      @Nonnull final Authentication authentication,
-      @Nonnull final Authorizer authorizer,
+      @Nonnull final AuthorizationSession session,
       @Nonnull final ApiGroup apiGroup,
       @Nonnull final ApiOperation apiOperation,
       @Nonnull final String entityType) {
-    return isAPIAuthorizedEntityType(
-        authentication, authorizer, apiGroup, apiOperation, List.of(entityType));
+    return isAPIAuthorizedEntityType(session, apiGroup, apiOperation, List.of(entityType));
   }
 
   public static boolean isAPIAuthorizedEntityType(
-      @Nonnull final Authentication authentication,
-      @Nonnull final Authorizer authorizer,
+      @Nonnull final AuthorizationSession session,
       @Nonnull final ApiOperation apiOperation,
       @Nonnull final Collection<String> entityTypes) {
 
-    return isAPIAuthorizedEntityType(authentication, authorizer, ENTITY, apiOperation, entityTypes);
+    return isAPIAuthorizedEntityType(session, ENTITY, apiOperation, entityTypes);
   }
 
   public static boolean isAPIAuthorizedEntityType(
-      @Nonnull final Authentication authentication,
-      @Nonnull final Authorizer authorizer,
+      @Nonnull final AuthorizationSession session,
       @Nonnull final ApiGroup apiGroup,
       @Nonnull final ApiOperation apiOperation,
       @Nonnull final Collection<String> entityTypes) {
@@ -311,60 +335,95 @@ public class AuthUtil {
         .allMatch(
             entityType ->
                 isAPIAuthorized(
-                    authentication,
-                    authorizer,
+                    session,
                     lookupAPIPrivilege(apiGroup, apiOperation, entityType),
-                    new EntitySpec(entityType, "")));
+                    new EntitySpec(entityType, ""),
+                    Collections.emptyList()));
   }
 
   public static boolean isAPIAuthorized(
-      @Nonnull final Authentication authentication,
-      @Nonnull final Authorizer authorizer,
+      @Nonnull final AuthorizationSession session,
       @Nonnull final ApiGroup apiGroup,
       @Nonnull final ApiOperation apiOperation) {
     return isAPIAuthorized(
-        authentication,
-        authorizer,
+        session,
         lookupAPIPrivilege(apiGroup, apiOperation, null),
-        (EntitySpec) null);
+        (EntitySpec) null,
+        Collections.emptyList());
   }
 
   public static boolean isAPIAuthorized(
-      @Nonnull final Authentication authentication,
-      @Nonnull final Authorizer authorizer,
+      @Nonnull final AuthorizationSession session,
       @Nonnull final PoliciesConfig.Privilege privilege,
       @Nullable final EntitySpec resource) {
-    return isAPIAuthorized(authentication, authorizer, Disjunctive.disjoint(privilege), resource);
+    return isAPIAuthorized(
+        session, Disjunctive.disjoint(privilege), resource, Collections.emptyList());
   }
 
   public static boolean isAPIAuthorized(
-      @Nonnull final Authentication authentication,
-      @Nonnull final Authorizer authorizer,
+      @Nonnull final AuthorizationSession session,
       @Nonnull final PoliciesConfig.Privilege privilege) {
     return isAPIAuthorized(
-        authentication, authorizer, Disjunctive.disjoint(privilege), (EntitySpec) null);
+        session, Disjunctive.disjoint(privilege), (EntitySpec) null, Collections.emptyList());
   }
 
-  private static boolean isAPIAuthorized(
-      @Nonnull final Authentication authentication,
-      @Nonnull final Authorizer authorizer,
-      @Nonnull final Disjunctive<Conjunctive<PoliciesConfig.Privilege>> privileges,
+  /**
+   * Allow specific privilege OR MANAGE_SYSTEM_OPERATIONS_PRIVILEGE
+   *
+   * @param session authorization session
+   * @param privilege specific privilege
+   * @return authorized status
+   */
+  public static boolean isAPIOperationsAuthorized(
+      @Nonnull final AuthorizationSession session,
+      @Nonnull final PoliciesConfig.Privilege privilege) {
+    return isAPIAuthorized(
+        session,
+        Disjunctive.disjoint(privilege, MANAGE_SYSTEM_OPERATIONS_PRIVILEGE),
+        (EntitySpec) null,
+        Collections.emptyList());
+  }
+
+  public static boolean isAPIOperationsAuthorized(
+      @Nonnull final AuthorizationSession session,
+      @Nonnull final PoliciesConfig.Privilege privilege,
       @Nullable final EntitySpec resource) {
     return isAPIAuthorized(
-        authentication, authorizer, privileges, resource != null ? List.of(resource) : List.of());
+        session,
+        Disjunctive.disjoint(privilege, MANAGE_SYSTEM_OPERATIONS_PRIVILEGE),
+        resource,
+        Collections.emptyList());
+  }
+
+  public static boolean isAPIOperationsAuthorized(
+      @Nonnull final AuthorizationSession session,
+      @Nonnull final PoliciesConfig.Privilege privilege,
+      @Nullable final EntitySpec resource,
+      @Nonnull final Collection<EntitySpec> subResources) {
+    return isAPIAuthorized(
+        session,
+        Disjunctive.disjoint(privilege, MANAGE_SYSTEM_OPERATIONS_PRIVILEGE),
+        resource,
+        subResources);
   }
 
   private static boolean isAPIAuthorized(
-      @Nonnull final Authentication authentication,
-      @Nonnull final Authorizer authorizer,
+      @Nonnull final AuthorizationSession session,
       @Nonnull final Disjunctive<Conjunctive<PoliciesConfig.Privilege>> privileges,
-      @Nonnull final Collection<EntitySpec> resources) {
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))) {
+      @Nullable final EntitySpec resource,
+      @Nonnull final Collection<EntitySpec> subResources) {
+    return isAPIAuthorized(
+        session, privileges, resource != null ? List.of(resource) : List.of(), subResources);
+  }
+
+  private static boolean isAPIAuthorized(
+      @Nonnull final AuthorizationSession session,
+      @Nonnull final Disjunctive<Conjunctive<PoliciesConfig.Privilege>> privileges,
+      @Nonnull final Collection<EntitySpec> resources,
+      @Nonnull final Collection<EntitySpec> subResources) {
+    if (AuthUtil.isRestApiAuthorizationEnabled) {
       return isAuthorized(
-          authorizer,
-          authentication.getActor().toUrnStr(),
-          buildDisjunctivePrivilegeGroup(privileges),
-          resources);
+          session, buildDisjunctivePrivilegeGroup(privileges), resources, subResources);
     } else {
       return true;
     }
@@ -372,29 +431,25 @@ public class AuthUtil {
 
   /** GraphQL Methods */
   public static boolean canViewEntity(
-      @Nonnull final String actor, @Nonnull Authorizer authorizer, @Nonnull Urn urn) {
-    return canViewEntity(actor, authorizer, List.of(urn));
+      @Nonnull final AuthorizationSession session, @Nonnull Urn urn) {
+    return canViewEntity(session, List.of(urn));
   }
 
   public static boolean canViewEntity(
-      @Nonnull final String actor,
-      @Nonnull final Authorizer authorizer,
-      @Nonnull final Collection<Urn> urns) {
+      @Nonnull final AuthorizationSession session, @Nonnull final Collection<Urn> urns) {
 
-    return isAuthorizedEntityUrns(authorizer, actor, READ, urns);
+    return isAuthorizedEntityUrns(session, READ, urns);
   }
 
   public static boolean isAuthorized(
-      @Nonnull final String actor,
-      @Nonnull final Authorizer authorizer,
+      @Nonnull final AuthorizationSession session,
       @Nonnull final ApiGroup apiGroup,
       @Nonnull final ApiOperation apiOperation) {
-    return isAuthorized(authorizer, actor, lookupAPIPrivilege(apiGroup, apiOperation, null), null);
+    return isAuthorized(session, lookupAPIPrivilege(apiGroup, apiOperation, null), null);
   }
 
   public static boolean isAuthorizedEntityType(
-      @Nonnull final String actor,
-      @Nonnull final Authorizer authorizer,
+      @Nonnull final AuthorizationSession session,
       @Nonnull final ApiOperation apiOperation,
       @Nonnull final Collection<String> entityTypes) {
 
@@ -403,23 +458,20 @@ public class AuthUtil {
         .allMatch(
             entityType ->
                 isAuthorized(
-                    authorizer,
-                    actor,
+                    session,
                     lookupEntityAPIPrivilege(apiOperation, entityType),
                     new EntitySpec(entityType, "")));
   }
 
   public static boolean isAuthorizedEntityUrns(
-      @Nonnull final Authorizer authorizer,
-      @Nonnull final String actor,
+      @Nonnull final AuthorizationSession session,
       @Nonnull final ApiOperation apiOperation,
       @Nonnull final Collection<Urn> urns) {
-    return isAuthorizedUrns(authorizer, actor, ENTITY, apiOperation, urns);
+    return isAuthorizedUrns(session, ENTITY, apiOperation, urns);
   }
 
   public static boolean isAuthorizedUrns(
-      @Nonnull final Authorizer authorizer,
-      @Nonnull final String actor,
+      @Nonnull final AuthorizationSession session,
       @Nonnull final ApiGroup apiGroup,
       @Nonnull final ApiOperation apiOperation,
       @Nonnull final Collection<Urn> urns) {
@@ -435,50 +487,49 @@ public class AuthUtil {
               Disjunctive<Conjunctive<PoliciesConfig.Privilege>> privileges =
                   lookupAPIPrivilege(apiGroup, apiOperation, entry.getKey());
               return entry.getValue().stream()
-                  .allMatch(entitySpec -> isAuthorized(authorizer, actor, privileges, entitySpec));
+                  .allMatch(entitySpec -> isAuthorized(session, privileges, entitySpec));
             });
   }
 
   public static boolean isAuthorized(
-      @Nonnull final Authorizer authorizer,
-      @Nonnull final String actor,
+      @Nonnull final AuthorizationSession session,
       @Nonnull final PoliciesConfig.Privilege privilege) {
     return isAuthorized(
-        authorizer,
-        actor,
+        session,
         buildDisjunctivePrivilegeGroup(Disjunctive.disjoint(privilege)),
         (EntitySpec) null);
   }
 
   public static boolean isAuthorized(
-      @Nonnull final Authorizer authorizer,
-      @Nonnull final String actor,
+      @Nonnull final AuthorizationSession session,
       @Nonnull final PoliciesConfig.Privilege privilege,
       @Nullable final EntitySpec entitySpec) {
     return isAuthorized(
-        authorizer,
-        actor,
-        buildDisjunctivePrivilegeGroup(Disjunctive.disjoint(privilege)),
-        entitySpec);
+        session, buildDisjunctivePrivilegeGroup(Disjunctive.disjoint(privilege)), entitySpec);
   }
 
   private static boolean isAuthorized(
-      @Nonnull final Authorizer authorizer,
-      @Nonnull final String actor,
+      @Nonnull final AuthorizationSession session,
       @Nonnull final Disjunctive<Conjunctive<PoliciesConfig.Privilege>> privileges,
       @Nullable EntitySpec maybeResourceSpec) {
-    return isAuthorized(
-        authorizer, actor, buildDisjunctivePrivilegeGroup(privileges), maybeResourceSpec);
+    return isAuthorized(session, buildDisjunctivePrivilegeGroup(privileges), maybeResourceSpec);
   }
 
   public static boolean isAuthorized(
-      @Nonnull final Authorizer authorizer,
-      @Nonnull final String actor,
+      @Nonnull final AuthorizationSession session,
       @Nonnull final DisjunctivePrivilegeGroup privilegeGroup,
       @Nullable final EntitySpec resourceSpec) {
+    return isAuthorized(session, privilegeGroup, resourceSpec, Collections.emptyList());
+  }
+
+  public static boolean isAuthorized(
+      @Nonnull final AuthorizationSession session,
+      @Nonnull final DisjunctivePrivilegeGroup privilegeGroup,
+      @Nullable final EntitySpec resourceSpec,
+      @Nonnull final Collection<EntitySpec> subResources) {
 
     for (ConjunctivePrivilegeGroup conjunctive : privilegeGroup.getAuthorizedPrivilegeGroups()) {
-      if (isAuthorized(authorizer, actor, conjunctive, resourceSpec)) {
+      if (isAuthorized(session, conjunctive, resourceSpec, subResources)) {
         return true;
       }
     }
@@ -487,10 +538,10 @@ public class AuthUtil {
   }
 
   private static boolean isAuthorized(
-      @Nonnull final Authorizer authorizer,
-      @Nonnull final String actor,
+      @Nonnull final AuthorizationSession session,
       @Nonnull final ConjunctivePrivilegeGroup requiredPrivileges,
-      @Nullable final EntitySpec resourceSpec) {
+      @Nullable final EntitySpec resourceSpec,
+      @Nonnull final Collection<EntitySpec> subResources) {
 
     // if no privileges are required, deny
     if (requiredPrivileges.getRequiredPrivileges().isEmpty()) {
@@ -500,7 +551,7 @@ public class AuthUtil {
     // Each privilege in a group _must_ all be true to permit the operation.
     for (final String privilege : requiredPrivileges.getRequiredPrivileges()) {
       // Create and evaluate an Authorization request.
-      if (isDenied(authorizer, actor, privilege, resourceSpec)) {
+      if (isDenied(session, privilege, resourceSpec, subResources)) {
         // Short circuit.
         return false;
       }
@@ -509,17 +560,17 @@ public class AuthUtil {
   }
 
   private static boolean isAuthorized(
-      @Nonnull final Authorizer authorizer,
-      @Nonnull final String actor,
+      @Nonnull final AuthorizationSession session,
       @Nonnull final DisjunctivePrivilegeGroup privilegeGroup,
-      @Nonnull final Collection<EntitySpec> resourceSpecs) {
+      @Nonnull final Collection<EntitySpec> resourceSpecs,
+      @Nonnull final Collection<EntitySpec> subResources) {
 
     if (resourceSpecs.isEmpty()) {
-      return isAuthorized(authorizer, actor, privilegeGroup, (EntitySpec) null);
+      return isAuthorized(session, privilegeGroup, (EntitySpec) null);
     }
 
     return resourceSpecs.stream()
-        .allMatch(spec -> isAuthorized(authorizer, actor, privilegeGroup, spec));
+        .allMatch(spec -> isAuthorized(session, privilegeGroup, spec, subResources));
   }
 
   /** Common Methods */
@@ -603,8 +654,7 @@ public class AuthUtil {
     return buildDisjunctivePrivilegeGroup(lookupAPIPrivilege(apiGroup, apiOperation, entityType));
   }
 
-  @VisibleForTesting
-  static DisjunctivePrivilegeGroup buildDisjunctivePrivilegeGroup(
+  public static DisjunctivePrivilegeGroup buildDisjunctivePrivilegeGroup(
       final Disjunctive<Conjunctive<PoliciesConfig.Privilege>> privileges) {
     return new DisjunctivePrivilegeGroup(
         privileges.stream()
@@ -618,16 +668,14 @@ public class AuthUtil {
   }
 
   private static boolean isDenied(
-      @Nonnull final Authorizer authorizer,
-      @Nonnull final String actor,
+      @Nonnull final AuthorizationSession session,
       @Nonnull final String privilege,
-      @Nullable final EntitySpec resourceSpec) {
+      @Nullable final EntitySpec resourceSpec,
+      @Nonnull final Collection<EntitySpec> subResources) {
     // Create and evaluate an Authorization request.
-    final AuthorizationRequest request =
-        new AuthorizationRequest(actor, privilege, Optional.ofNullable(resourceSpec));
-    final AuthorizationResult result = authorizer.authorize(request);
+    final AuthorizationResult result = session.authorize(privilege, resourceSpec, subResources);
     return AuthorizationResult.Type.DENY.equals(result.getType());
   }
 
-  private AuthUtil() {}
+  protected AuthUtil() {}
 }
