@@ -3,7 +3,11 @@ package com.linkedin.metadata.kafka.hook;
 import static com.linkedin.metadata.Constants.*;
 import static com.linkedin.metadata.kafka.hook.MCLProcessingTestDataGenerator.*;
 import static com.linkedin.metadata.search.utils.QueryUtils.newRelationshipFilter;
+import static io.datahubproject.test.search.SearchTestUtils.TEST_ES_SEARCH_CONFIG;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
+import static org.testng.Assert.assertEquals;
 
 import com.linkedin.common.AuditStamp;
 import com.linkedin.common.InputField;
@@ -30,7 +34,6 @@ import com.linkedin.metadata.Constants;
 import com.linkedin.metadata.aspect.models.graph.Edge;
 import com.linkedin.metadata.boot.kafka.DataHubUpgradeKafkaListener;
 import com.linkedin.metadata.config.SystemUpdateConfiguration;
-import com.linkedin.metadata.config.search.ElasticSearchConfiguration;
 import com.linkedin.metadata.graph.GraphService;
 import com.linkedin.metadata.graph.elastic.ElasticSearchGraphService;
 import com.linkedin.metadata.key.ChartKey;
@@ -40,25 +43,26 @@ import com.linkedin.metadata.models.registry.EntityRegistry;
 import com.linkedin.metadata.query.filter.ConjunctiveCriterionArray;
 import com.linkedin.metadata.query.filter.Filter;
 import com.linkedin.metadata.query.filter.RelationshipDirection;
-import com.linkedin.metadata.search.EntitySearchService;
-import com.linkedin.metadata.search.elasticsearch.indexbuilder.EntityIndexBuilders;
+import com.linkedin.metadata.search.elasticsearch.ElasticSearchService;
 import com.linkedin.metadata.search.transformer.SearchDocumentTransformer;
+import com.linkedin.metadata.service.UpdateGraphIndicesService;
 import com.linkedin.metadata.service.UpdateIndicesService;
 import com.linkedin.metadata.systemmetadata.SystemMetadataService;
 import com.linkedin.metadata.timeseries.TimeseriesAspectService;
 import com.linkedin.metadata.utils.GenericRecordUtils;
+import com.linkedin.metadata.utils.elasticsearch.IndexConventionImpl;
 import com.linkedin.mxe.MetadataChangeLog;
 import com.linkedin.mxe.SystemMetadata;
 import com.linkedin.schema.NumberType;
 import com.linkedin.schema.SchemaField;
 import com.linkedin.schema.SchemaFieldDataType;
+import com.linkedin.structured.StructuredPropertyDefinition;
 import io.datahubproject.metadata.context.OperationContext;
 import io.datahubproject.test.metadata.context.TestOperationContexts;
 import java.net.URISyntaxException;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
-import java.util.ArrayList;
-import java.util.Collections;
+import java.util.Set;
 import org.mockito.Mockito;
 import org.springframework.beans.factory.annotation.Value;
 import org.testng.annotations.BeforeMethod;
@@ -87,16 +91,16 @@ public class UpdateIndicesHookTest {
   static final long LAST_OBSERVED_3 = 789L;
   private UpdateIndicesHook updateIndicesHook;
   private GraphService mockGraphService;
-  private EntitySearchService mockEntitySearchService;
+  private ElasticSearchService mockEntitySearchService;
   private TimeseriesAspectService mockTimeseriesAspectService;
   private SystemMetadataService mockSystemMetadataService;
   private SearchDocumentTransformer searchDocumentTransformer;
   private DataHubUpgradeKafkaListener mockDataHubUpgradeKafkaListener;
   private ConfigurationProvider mockConfigurationProvider;
-  private EntityIndexBuilders mockEntityIndexBuilders;
   private Urn actorUrn;
   private UpdateIndicesService updateIndicesService;
   private UpdateIndicesHook reprocessUIHook;
+  private OperationContext opContext;
 
   @Value("${elasticsearch.index.maxArrayLength}")
   private int maxArrayLength;
@@ -104,41 +108,38 @@ public class UpdateIndicesHookTest {
   @BeforeMethod
   public void setupTest() {
     actorUrn = UrnUtils.getUrn(TEST_ACTOR_URN);
-    mockGraphService = Mockito.mock(ElasticSearchGraphService.class);
-    mockEntitySearchService = Mockito.mock(EntitySearchService.class);
-    mockTimeseriesAspectService = Mockito.mock(TimeseriesAspectService.class);
-    mockSystemMetadataService = Mockito.mock(SystemMetadataService.class);
+    mockGraphService = mock(ElasticSearchGraphService.class);
+    mockEntitySearchService = mock(ElasticSearchService.class);
+    mockTimeseriesAspectService = mock(TimeseriesAspectService.class);
+    mockSystemMetadataService = mock(SystemMetadataService.class);
     searchDocumentTransformer = new SearchDocumentTransformer(1000, 1000, 1000);
-    mockDataHubUpgradeKafkaListener = Mockito.mock(DataHubUpgradeKafkaListener.class);
-    mockConfigurationProvider = Mockito.mock(ConfigurationProvider.class);
-    mockEntityIndexBuilders = Mockito.mock(EntityIndexBuilders.class);
+    mockDataHubUpgradeKafkaListener = mock(DataHubUpgradeKafkaListener.class);
+    mockConfigurationProvider = mock(ConfigurationProvider.class);
 
-    ElasticSearchConfiguration elasticSearchConfiguration = new ElasticSearchConfiguration();
+    when(mockEntitySearchService.getIndexConvention()).thenReturn(IndexConventionImpl.noPrefix(""));
+
     SystemUpdateConfiguration systemUpdateConfiguration = new SystemUpdateConfiguration();
     systemUpdateConfiguration.setWaitForSystemUpdate(false);
-    Mockito.when(mockConfigurationProvider.getElasticSearch())
-        .thenReturn(elasticSearchConfiguration);
+    when(mockConfigurationProvider.getElasticSearch()).thenReturn(TEST_ES_SEARCH_CONFIG);
     updateIndicesService =
         new UpdateIndicesService(
-            mockGraphService,
+            UpdateGraphIndicesService.withService(mockGraphService),
             mockEntitySearchService,
             mockTimeseriesAspectService,
             mockSystemMetadataService,
             searchDocumentTransformer,
-            mockEntityIndexBuilders);
-
-    OperationContext systemOperationContext =
-        TestOperationContexts.systemContextNoSearchAuthorization();
+            "MD5");
+    opContext = TestOperationContexts.systemContextNoSearchAuthorization();
 
     updateIndicesHook = new UpdateIndicesHook(updateIndicesService, true, false);
-    updateIndicesHook.init(systemOperationContext);
+    updateIndicesHook.init(opContext);
     reprocessUIHook = new UpdateIndicesHook(updateIndicesService, true, true);
-    reprocessUIHook.init(systemOperationContext);
+    reprocessUIHook.init(opContext);
   }
 
   @Test
   public void testFineGrainedLineageEdgesAreAdded() throws Exception {
-    updateIndicesService.setGraphDiffMode(false);
+    updateIndicesService.getUpdateGraphIndicesService().setGraphDiffMode(false);
     Urn upstreamUrn =
         UrnUtils.getUrn(
             "urn:li:schemaField:(urn:li:dataset:(urn:li:dataPlatform:hdfs,SampleCypressHdfsDataset,PROD),foo_info)");
@@ -165,8 +166,9 @@ public class UpdateIndicesHookTest {
     Mockito.verify(mockGraphService, Mockito.times(1)).addEdge(Mockito.eq(edge));
     Mockito.verify(mockGraphService, Mockito.times(1))
         .removeEdgesFromNode(
+            any(OperationContext.class),
             Mockito.eq(downstreamUrn),
-            Mockito.eq(new ArrayList<>(Collections.singleton(DOWNSTREAM_OF))),
+            Mockito.eq(Set.of(DOWNSTREAM_OF)),
             Mockito.eq(
                 newRelationshipFilter(
                     new Filter().setOr(new ConjunctiveCriterionArray()),
@@ -175,7 +177,7 @@ public class UpdateIndicesHookTest {
 
   @Test
   public void testFineGrainedLineageEdgesAreAddedRestate() throws Exception {
-    updateIndicesService.setGraphDiffMode(false);
+    updateIndicesService.getUpdateGraphIndicesService().setGraphDiffMode(false);
     Urn upstreamUrn =
         UrnUtils.getUrn(
             "urn:li:schemaField:(urn:li:dataset:(urn:li:dataPlatform:hdfs,SampleCypressHdfsDataset,PROD),foo_info)");
@@ -203,8 +205,9 @@ public class UpdateIndicesHookTest {
     Mockito.verify(mockGraphService, Mockito.times(1)).addEdge(Mockito.eq(edge));
     Mockito.verify(mockGraphService, Mockito.times(1))
         .removeEdgesFromNode(
+            any(OperationContext.class),
             Mockito.eq(downstreamUrn),
-            Mockito.eq(new ArrayList<>(Collections.singleton(DOWNSTREAM_OF))),
+            Mockito.eq(Set.of(DOWNSTREAM_OF)),
             Mockito.eq(
                 newRelationshipFilter(
                     new Filter().setOr(new ConjunctiveCriterionArray()),
@@ -230,12 +233,12 @@ public class UpdateIndicesHookTest {
     EntityRegistry mockEntityRegistry = createMockEntityRegistry();
     updateIndicesService =
         new UpdateIndicesService(
-            mockGraphService,
+            new UpdateGraphIndicesService(mockGraphService, false, true),
             mockEntitySearchService,
             mockTimeseriesAspectService,
             mockSystemMetadataService,
             searchDocumentTransformer,
-            mockEntityIndexBuilders);
+            "MD5");
 
     updateIndicesHook = new UpdateIndicesHook(updateIndicesService, true, false);
     updateIndicesHook.init(
@@ -251,8 +254,9 @@ public class UpdateIndicesHookTest {
     Mockito.verify(mockGraphService, Mockito.times(1)).addEdge(Mockito.eq(edge));
     Mockito.verify(mockGraphService, Mockito.times(1))
         .removeEdgesFromNode(
+            any(OperationContext.class),
             Mockito.eq(downstreamUrn),
-            Mockito.eq(new ArrayList<>(Collections.singleton(DOWNSTREAM_OF))),
+            Mockito.eq(Set.of(DOWNSTREAM_OF)),
             Mockito.eq(
                 newRelationshipFilter(
                     new Filter().setOr(new ConjunctiveCriterionArray()),
@@ -261,9 +265,6 @@ public class UpdateIndicesHookTest {
 
   @Test
   public void testMCLProcessExhaustive() throws URISyntaxException {
-
-    updateIndicesService.setGraphDiffMode(true);
-    updateIndicesService.setSearchDiffMode(true);
     /*
      * newLineage
      */
@@ -427,7 +428,7 @@ public class UpdateIndicesHookTest {
 
     // Forced removal of all edges
     Mockito.verify(mockGraphService, Mockito.times(1))
-        .removeEdgesFromNode(Mockito.any(), Mockito.any(), Mockito.any());
+        .removeEdgesFromNode(any(OperationContext.class), any(), any(), any());
     // Forced add of edges
     Mockito.verify(mockGraphService, Mockito.times(2)).addEdge(Mockito.any());
     // Forced document update
@@ -437,8 +438,6 @@ public class UpdateIndicesHookTest {
 
   @Test
   public void testMCLUIPreProcessed() throws Exception {
-    updateIndicesService.setGraphDiffMode(true);
-    updateIndicesService.setSearchDiffMode(true);
     Urn upstreamUrn =
         UrnUtils.getUrn(
             "urn:li:schemaField:(urn:li:dataset:(urn:li:dataPlatform:hdfs,SampleCypressHdfsDataset,PROD),foo_info)");
@@ -458,8 +457,6 @@ public class UpdateIndicesHookTest {
 
   @Test
   public void testMCLUIPreProcessedReprocess() throws Exception {
-    updateIndicesService.setGraphDiffMode(true);
-    updateIndicesService.setSearchDiffMode(true);
     Urn upstreamUrn =
         UrnUtils.getUrn(
             "urn:li:schemaField:(urn:li:dataset:(urn:li:dataPlatform:hdfs,SampleCypressHdfsDataset,PROD),foo_info2)");
@@ -475,40 +472,67 @@ public class UpdateIndicesHookTest {
         .upsertDocument(any(OperationContext.class), Mockito.any(), Mockito.any(), Mockito.any());
   }
 
+  @Test
+  public void testUpdateIndexMappings() throws CloneNotSupportedException {
+    // ensure no mutation
+    EntitySpec entitySpec =
+        opContext.getEntityRegistry().getEntitySpec(STRUCTURED_PROPERTY_ENTITY_NAME);
+    AspectSpec aspectSpec = entitySpec.getAspectSpec(STRUCTURED_PROPERTY_DEFINITION_ASPECT_NAME);
+
+    StructuredPropertyDefinition oldValueOrigin =
+        new StructuredPropertyDefinition()
+            .setEntityTypes(
+                new UrnArray(
+                    UrnUtils.getUrn("urn:li:dataset:(urn:li:dataPlatform:hive,foo1,PROD)"),
+                    UrnUtils.getUrn("urn:li:dataset:(urn:li:dataPlatform:hive,foo2,PROD)")));
+    StructuredPropertyDefinition newValueOrigin =
+        new StructuredPropertyDefinition()
+            .setEntityTypes(
+                new UrnArray(
+                    UrnUtils.getUrn("urn:li:dataset:(urn:li:dataPlatform:hive,foo2,PROD)"),
+                    UrnUtils.getUrn("urn:li:dataset:(urn:li:dataPlatform:hive,foo3,PROD)")));
+
+    StructuredPropertyDefinition oldValue =
+        new StructuredPropertyDefinition(oldValueOrigin.data().copy());
+    StructuredPropertyDefinition newValue =
+        new StructuredPropertyDefinition(newValueOrigin.data().copy());
+
+    updateIndicesService.updateIndexMappings(
+        UrnUtils.getUrn(TEST_DATASET_URN), entitySpec, aspectSpec, newValue, oldValue);
+
+    assertEquals(oldValue, oldValueOrigin, "Ensure no mutation to input objects");
+    assertEquals(newValue, newValueOrigin, "Ensure no mutation to input objects");
+  }
+
   private EntityRegistry createMockEntityRegistry() {
     // need to mock this registry instead of using test-entity-registry.yml because inputFields does
     // not work due to a known bug
-    EntityRegistry mockEntityRegistry = Mockito.mock(EntityRegistry.class);
-    EntitySpec entitySpec = Mockito.mock(EntitySpec.class);
+    EntityRegistry mockEntityRegistry = mock(EntityRegistry.class);
+    EntitySpec entitySpec = mock(EntitySpec.class);
     AspectSpec aspectSpec = createMockAspectSpec(InputFields.class, InputFields.dataSchema());
     AspectSpec upstreamLineageAspectSpec =
         createMockAspectSpec(UpstreamLineage.class, UpstreamLineage.dataSchema());
-    Mockito.when(mockEntityRegistry.getEntitySpec(Constants.CHART_ENTITY_NAME))
-        .thenReturn(entitySpec);
-    Mockito.when(mockEntityRegistry.getEntitySpec(Constants.DATASET_ENTITY_NAME))
-        .thenReturn(entitySpec);
-    Mockito.when(mockEntityRegistry.getEntitySpec(SCHEMA_FIELD_ENTITY_NAME)).thenReturn(entitySpec);
-    Mockito.when(mockEntityRegistry.getEntitySpec(DATA_PLATFORM_ENTITY_NAME))
-        .thenReturn(entitySpec);
-    Mockito.when(entitySpec.getAspectSpec(Constants.INPUT_FIELDS_ASPECT_NAME))
-        .thenReturn(aspectSpec);
-    Mockito.when(entitySpec.getAspectSpec(Constants.UPSTREAM_LINEAGE_ASPECT_NAME))
+    when(mockEntityRegistry.getEntitySpec(Constants.CHART_ENTITY_NAME)).thenReturn(entitySpec);
+    when(mockEntityRegistry.getEntitySpec(Constants.DATASET_ENTITY_NAME)).thenReturn(entitySpec);
+    when(mockEntityRegistry.getEntitySpec(SCHEMA_FIELD_ENTITY_NAME)).thenReturn(entitySpec);
+    when(mockEntityRegistry.getEntitySpec(DATA_PLATFORM_ENTITY_NAME)).thenReturn(entitySpec);
+    when(entitySpec.getAspectSpec(Constants.INPUT_FIELDS_ASPECT_NAME)).thenReturn(aspectSpec);
+    when(entitySpec.getAspectSpec(Constants.UPSTREAM_LINEAGE_ASPECT_NAME))
         .thenReturn(upstreamLineageAspectSpec);
-    Mockito.when(aspectSpec.isTimeseries()).thenReturn(false);
-    Mockito.when(aspectSpec.getName()).thenReturn(Constants.INPUT_FIELDS_ASPECT_NAME);
-    Mockito.when(upstreamLineageAspectSpec.isTimeseries()).thenReturn(false);
-    Mockito.when(upstreamLineageAspectSpec.getName())
-        .thenReturn(Constants.UPSTREAM_LINEAGE_ASPECT_NAME);
+    when(aspectSpec.isTimeseries()).thenReturn(false);
+    when(aspectSpec.getName()).thenReturn(Constants.INPUT_FIELDS_ASPECT_NAME);
+    when(upstreamLineageAspectSpec.isTimeseries()).thenReturn(false);
+    when(upstreamLineageAspectSpec.getName()).thenReturn(Constants.UPSTREAM_LINEAGE_ASPECT_NAME);
     AspectSpec chartKeyAspectSpec = createMockAspectSpec(ChartKey.class, ChartKey.dataSchema());
-    Mockito.when(entitySpec.getKeyAspectSpec()).thenReturn(chartKeyAspectSpec);
+    when(entitySpec.getKeyAspectSpec()).thenReturn(chartKeyAspectSpec);
     return mockEntityRegistry;
   }
 
   private <T extends RecordTemplate> AspectSpec createMockAspectSpec(
       Class<T> clazz, RecordDataSchema schema) {
-    AspectSpec mockSpec = Mockito.mock(AspectSpec.class);
-    Mockito.when(mockSpec.getDataTemplateClass()).thenReturn((Class<RecordTemplate>) clazz);
-    Mockito.when(mockSpec.getPegasusSchema()).thenReturn(schema);
+    AspectSpec mockSpec = mock(AspectSpec.class);
+    when(mockSpec.getDataTemplateClass()).thenReturn((Class<RecordTemplate>) clazz);
+    when(mockSpec.getPegasusSchema()).thenReturn(schema);
     return mockSpec;
   }
 
